--- a/public/500.html
+++ b/public/500.html
@@ -43,22 +43,22 @@
 
 		<!-- START NAV LEFT -->
 		<ul id="nav-left" class="clearme listreset">
-			<li><a href="/quickstart">Quick Start</a></li>
+			<li><a href="/quickstart.html">Quick Start</a></li>
 			<li class="nav-sep"></li>
 
-			<li><a href="/documentation">Documentation</a></li>
+			<li><a href="/documentation.html">Documentation</a></li>
 		</ul>
 		<!-- END NAV LEFT -->
 		
 		<!-- START NAV RIGHT -->
 		<ul id="nav-right" class="clearme listreset">
-			<li><a href="/contribute">Contribute</a></li>
+			<li><a href="/contribute.html">Contribute</a></li>
 			<li class="nav-sep"></li>
 
 			<li><a href="/dancefloor">Dancers</a></li>
 			<li class="nav-sep"></li>
 
-			<li><a href="/about">About</a></li>
+			<li><a href="/about.html">About</a></li>
 		</ul>
 		<!-- END NAV RIGHT -->
 			
