--- a/public/500.html
+++ b/public/500.html
@@ -55,7 +55,7 @@
 			<li><a href="/contribute.html">Contribute</a></li>
 			<li class="nav-sep"></li>
 
-			<li><a href="/dancefloor">Dancers</a></li>
+			<li><a href="/dancefloor.html">Dancers</a></li>
 			<li class="nav-sep"></li>
 
 			<li><a href="/about.html">About</a></li>
