Update repo URLs

--- a/public/404.html
+++ b/public/404.html
@@ -97,7 +97,7 @@
 <a href="http://twitter.com/PerlDancer/">On Twitter</a>: 
 </div>
 
-	<div id="copyright">Dancer is copyright © 2009-2011 <a href="http://sukria.net/" rel="external">Alexis Sukrieh</a> - <a href="http://github.com/sukria/Dancer/" rel="external">Fork on GitHub</a> - This website is <a href="http://github.com/sukria/perldancer-website/" rel="external">free software</a>.</div>
+	<div id="copyright">Dancer is copyright © 2009-2011 <a href="http://sukria.net/" rel="external">Alexis Sukrieh</a> - <a href="http://github.com/PerlDancer/Dancer/" rel="external">Fork on GitHub</a> - This website is <a href="http://github.com/PerlDancer/perldancer-website/" rel="external">free software</a>.</div>
 
 </div>
 
@@ -106,7 +106,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.6/jquery-ui.min.js"></script> 
 <script src="/javascripts/perlDancer.js"></script>
 
-<a href="http://github.com/sukria/Dancer"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+<a href="http://github.com/PerlDancer/Dancer"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
 
 <script type="text/javascript">
