--- a/public/500.html
+++ b/public/500.html
@@ -10,7 +10,10 @@
 	<meta name="copyright" content="Copyright 2009-2011 Alexis Sukrieh" />
 
         <meta name="google-site-verification" content="XINoghSibCxQxEzULZIDt-a_E0kWTQU7k54qPKwlLMw" />
-
+	
+	<meta http-equiv="X-UA-Compatible" content="ie-edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 	<link rel="stylesheet" href="/css/style.css" media="screen" />
 	<link rel="stylesheet" href="/css/tweets.css" media="screen" />
 	<!--[if gte IE 7]>
